prepareandome para hacer cambios en produccion

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY= django-insecure-4u$#5*a#rnb+)acz#8wu3z&*h86l_%ygi6fds*sf7^^q8mj_z^
-DEBUG=False
-ALLOWED_HOSTS=toolboxweb.onrender.com,localhost,127.0.0.1
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 
